--- a/simple_calculator.ipynb
+++ b/simple_calculator.ipynb
@@ -1,110 +1,144 @@
-from tkinter import *
-from tkinter import ttk
-
-# cor
-cor1 = "#3b3b3b" #preto
-cor2 = "#feffff" #branco
-cor3 = "#38576b" #azul
-cor4 = "#ECEFF1" #cinza
-cor5 = "#FFAB40" #laranja
-
-janela =Tk()
-janela.title("Calculadora")
-janela.geometry("235x318")
-janela.config(bg=cor1)
-
-# criando frames
-frame_tela = Frame(janela, width=235, height=50, bg=cor3)
-frame_tela.grid(row=0, column=0)
-
-frame_corpo = Frame(janela, width=235, height=268, bg=cor1)
-frame_corpo.grid(row=1, column=0)
-
-# varialvel todos valores
-
-todos_valores = ""
-
-
-#criando função
-
-def entrar_valores(event):
-    
-    global todos_valores
-    
-    todos_valores = todos_valores + str(event)
-    
-    
-    #passando valor para tela
-    valor_texto.set(todos_valores)
-
-
-# função para calcular
-
-def calcular():
-    global todos_valores
-    resultado = eval(todos_valores)
-    
-    valor_texto.set(str(resultado))
-
-# função limpar tela
-
-def limpar_tela():
-    global todos_valores
-    todos_valores =""
-    valor_texto.set("")
-
-
-    
-    
-# criando label
-valor_texto = StringVar()
-
-app_label = Label(frame_tela, textvariable=valor_texto, width=16, height=2, padx=7, relief=FLAT, anchor="e", justify=RIGHT, font=('Ivy 18 '), bg=cor3, fg=cor2)
-app_label.place(x=0, y=0)
-
-
-#criando botões
-
-b_1 = Button(frame_corpo,command=limpar_tela, text="C", width=11, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_1.place(x=0, y=0)
-b_2 = Button(frame_corpo, command = lambda: entrar_valores("%"), text="%", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_2.place(x=118, y=0)
-b_3 = Button(frame_corpo, command = lambda: entrar_valores("/"), text="/", width=5, height=2, bg=cor5, fg=cor2, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_3.place(x=177, y=0)
-
-b_4 = Button(frame_corpo, command = lambda: entrar_valores("7"), text="7", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_4.place(x=0, y=52)
-b_5 = Button(frame_corpo, command = lambda: entrar_valores("8"), text="8", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_5.place(x=59, y=52)
-b_6 = Button(frame_corpo, command = lambda: entrar_valores("9"), text="9", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_6.place(x=118, y=52)
-b_7 = Button(frame_corpo, command = lambda: entrar_valores("*"), text="*", width=5, height=2, bg=cor5, fg=cor2, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_7.place(x=177, y=52)
-
-b_8 = Button(frame_corpo, command = lambda: entrar_valores("4"), text="4", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_8.place(x=0, y=104)
-b_9 = Button(frame_corpo, command = lambda: entrar_valores("5"), text="5", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_9.place(x=59, y=104)
-b_10 = Button(frame_corpo, command = lambda: entrar_valores("6"), text="6", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_10.place(x=118, y=104)
-b_11 = Button(frame_corpo, command = lambda: entrar_valores("-"), text="-", width=5, height=2, bg=cor5, fg=cor2, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_11.place(x=177, y=104)
-
-b_12 = Button(frame_corpo, command = lambda: entrar_valores("1"), text="1", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_12.place(x=0, y=156)
-b_13 = Button(frame_corpo, command = lambda: entrar_valores("2"), text="2", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_13.place(x=59, y=156)
-b_14 = Button(frame_corpo, command = lambda: entrar_valores("3"), text="3", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_14.place(x=118, y=156)
-b_15 = Button(frame_corpo, command = lambda: entrar_valores("+"), text="+", width=5, height=2, bg=cor5, fg=cor2, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_15.place(x=177, y=156)
-
-b_16 = Button(frame_corpo, command = lambda: entrar_valores("0"), text="0", width=11, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_16.place(x=0, y=208)
-b_17 = Button(frame_corpo, command = lambda: entrar_valores("."), text=".", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_17.place(x=118, y=208)
-b_18 = Button(frame_corpo, command = calcular, text="=", width=5, height=2, bg=cor5, fg=cor2, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)
-b_18.place(x=177, y=208)
-
-
-janela.mainloop()
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f9a5b43f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "from tkinter import ttk\n",
+    "\n",
+    "# cor\n",
+    "cor1 = \"#3b3b3b\" #preto\n",
+    "cor2 = \"#feffff\" #branco\n",
+    "cor3 = \"#38576b\" #azul\n",
+    "cor4 = \"#ECEFF1\" #cinza\n",
+    "cor5 = \"#FFAB40\" #laranja\n",
+    "\n",
+    "janela =Tk()\n",
+    "janela.title(\"Calculadora\")\n",
+    "janela.geometry(\"235x318\")\n",
+    "janela.config(bg=cor1)\n",
+    "\n",
+    "# criando frames\n",
+    "frame_tela = Frame(janela, width=235, height=50, bg=cor3)\n",
+    "frame_tela.grid(row=0, column=0)\n",
+    "\n",
+    "frame_corpo = Frame(janela, width=235, height=268, bg=cor1)\n",
+    "frame_corpo.grid(row=1, column=0)\n",
+    "\n",
+    "# varialvel todos valores\n",
+    "\n",
+    "todos_valores = \"\"\n",
+    "\n",
+    "\n",
+    "#criando função\n",
+    "\n",
+    "def entrar_valores(event):\n",
+    "    \n",
+    "    global todos_valores\n",
+    "    \n",
+    "    todos_valores = todos_valores + str(event)\n",
+    "    \n",
+    "    \n",
+    "    #passando valor para tela\n",
+    "    valor_texto.set(todos_valores)\n",
+    "\n",
+    "\n",
+    "# função para calcular\n",
+    "\n",
+    "def calcular():\n",
+    "    global todos_valores\n",
+    "    resultado = eval(todos_valores)\n",
+    "    \n",
+    "    valor_texto.set(str(resultado))\n",
+    "\n",
+    "# função limpar tela\n",
+    "\n",
+    "def limpar_tela():\n",
+    "    global todos_valores\n",
+    "    todos_valores =\"\"\n",
+    "    valor_texto.set(\"\")\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "# criando label\n",
+    "valor_texto = StringVar()\n",
+    "\n",
+    "app_label = Label(frame_tela, textvariable=valor_texto, width=16, height=2, padx=7, relief=FLAT, anchor=\"e\", justify=RIGHT, font=('Ivy 18 '), bg=cor3, fg=cor2)\n",
+    "app_label.place(x=0, y=0)\n",
+    "\n",
+    "\n",
+    "#criando botões\n",
+    "\n",
+    "b_1 = Button(frame_corpo,command=limpar_tela, text=\"C\", width=11, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_1.place(x=0, y=0)\n",
+    "b_2 = Button(frame_corpo, command = lambda: entrar_valores(\"%\"), text=\"%\", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_2.place(x=118, y=0)\n",
+    "b_3 = Button(frame_corpo, command = lambda: entrar_valores(\"/\"), text=\"/\", width=5, height=2, bg=cor5, fg=cor2, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_3.place(x=177, y=0)\n",
+    "\n",
+    "b_4 = Button(frame_corpo, command = lambda: entrar_valores(\"7\"), text=\"7\", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_4.place(x=0, y=52)\n",
+    "b_5 = Button(frame_corpo, command = lambda: entrar_valores(\"8\"), text=\"8\", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_5.place(x=59, y=52)\n",
+    "b_6 = Button(frame_corpo, command = lambda: entrar_valores(\"9\"), text=\"9\", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_6.place(x=118, y=52)\n",
+    "b_7 = Button(frame_corpo, command = lambda: entrar_valores(\"*\"), text=\"*\", width=5, height=2, bg=cor5, fg=cor2, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_7.place(x=177, y=52)\n",
+    "\n",
+    "b_8 = Button(frame_corpo, command = lambda: entrar_valores(\"4\"), text=\"4\", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_8.place(x=0, y=104)\n",
+    "b_9 = Button(frame_corpo, command = lambda: entrar_valores(\"5\"), text=\"5\", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_9.place(x=59, y=104)\n",
+    "b_10 = Button(frame_corpo, command = lambda: entrar_valores(\"6\"), text=\"6\", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_10.place(x=118, y=104)\n",
+    "b_11 = Button(frame_corpo, command = lambda: entrar_valores(\"-\"), text=\"-\", width=5, height=2, bg=cor5, fg=cor2, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_11.place(x=177, y=104)\n",
+    "\n",
+    "b_12 = Button(frame_corpo, command = lambda: entrar_valores(\"1\"), text=\"1\", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_12.place(x=0, y=156)\n",
+    "b_13 = Button(frame_corpo, command = lambda: entrar_valores(\"2\"), text=\"2\", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_13.place(x=59, y=156)\n",
+    "b_14 = Button(frame_corpo, command = lambda: entrar_valores(\"3\"), text=\"3\", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_14.place(x=118, y=156)\n",
+    "b_15 = Button(frame_corpo, command = lambda: entrar_valores(\"+\"), text=\"+\", width=5, height=2, bg=cor5, fg=cor2, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_15.place(x=177, y=156)\n",
+    "\n",
+    "b_16 = Button(frame_corpo, command = lambda: entrar_valores(\"0\"), text=\"0\", width=11, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_16.place(x=0, y=208)\n",
+    "b_17 = Button(frame_corpo, command = lambda: entrar_valores(\".\"), text=\".\", width=5, height=2, bg=cor4, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_17.place(x=118, y=208)\n",
+    "b_18 = Button(frame_corpo, command = calcular, text=\"=\", width=5, height=2, bg=cor5, fg=cor2, font=('Ivy 13 bold'), relief=RAISED, overrelief=RIDGE)\n",
+    "b_18.place(x=177, y=208)\n",
+    "\n",
+    "\n",
+    "janela.mainloop()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
